_sass/_base.scss
* {
    /*font-family: 'Helvetica', 'Arial', sans-serif;*/
    font-family: 'Open Sans', 'Arial', sans-serif;
    text-align: left;
    line-height: 2;
}

body {
    background-color: var(--bg-color);
    font-size: var(--body-font-size);
}

.main {
    .var-color {
        color: var(--fg-color-body);
    }
}

.main * {
    text-align: justify;
}

.container {
    /*max-width: 900px;
    min-height: 900px;*/
    max-width: 1020px;
    min-height: 1020px;
    margin: 0 auto;
    background-color: var(--bg-color-cv);
    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
    /*padding:30px;*/
    margin-top:30px;
    margin-bottom: 30px;
    .container-block {
        width: 90%;
        margin: 0 auto;
        padding:20px;
        display: grid;
        grid-template-columns: 2fr 5fr;
        .sidebar {
            /*margin-top: 20px;*/
        }
    }
}

